# start

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
data/enemies/: definitions.json
data/levels/: level1.json  level2.json  level3.json
data/shop/: items.json
include/: SpriteUtils.h  config.h  menu.h
include/core/: Ability.h  AbilityManager.h  Character.h  CoinManager.h  CombatSystem.h  Enemy.h  EnemyManager.h  GameState.h  GoalFlag.h  LevelManager.h  Platform.h  Player.h  Projectile.h  SaveManager.h  StateStack.h  Stats.h
include/core/abilities/: IAbility.h  ProjectileAbility.h
include/entities/: Coin.h  Enemy.h
include/screens/: GameScreen.h  LevelSelectScreen.h  MenuScreen.h  ShopScreen.h
src/: CMakeCache.txt  cmake_install.cmake  gui_impl.cpp  main.cpp  menu.cpp
src/core/: Character.cpp  CoinManager.cpp  CombatSystem.cpp  Enemy.cpp  EnemyManager.cpp  GoalFlag.cpp  LevelManager.cpp  Player.cpp  Projectile.cpp  SaveManager.cpp
src/core/abilities/: ProjectileAbility.cpp
src/entities/: Coin.cpp  Enemy.cpp
src/screens/: GameScreen.cpp  LevelSelectScreen.cpp  MenuScreen.cpp  ShopScreen.cpp
